fix footer, fix menu, general background problems on mobile etc...

--- a/src/components/DevoHero/_style.scss
+++ b/src/components/DevoHero/_style.scss
@@ -15,6 +15,5 @@
 // }
 
 .background { 
-    //background-color: red;
-    height: 95vh;
+    min-height: 90vh;
 }
