--- a/src/views/DAOView/_style.scss
+++ b/src/views/DAOView/_style.scss
@@ -1,4 +1,13 @@
 .top-text {
-    padding: 25px;
+    padding: 30px;
     color: white;
+}
+
+.bottom-text {
+    padding: 30px;
+    color: white;
+}
+
+.page-container {
+    min-height: 100vh;
 }
